--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.1",
     "description": "",
     "main": "server.js",
-  "dependencies": {
+    "dependencies": {
+      "express": "4.8.4",
     "gulp": "^3.5.6",
     "gulp-sass": "^1.3.3",
     "gulp-concat": "^2.2.0",
