--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fan",
   "version": "1.0.0",
   "description": "convert fan page to apps",
-  "main": "gulpfile.js",
+  "main": "server.js",
   "dependencies": {
     "express": "^4.13.3"
   },
